// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders correctly 1`] = `
style = Object {}

<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "red",
          "borderRadius": 4,
          "flex": 1,
          "height": 130,
          "justifyContent": "center",
          "overflow": "hidden",
          "shadowColor": "#ccc",
          "shadowOffset": Object {
            "height": 5,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 1,
        },
        undefined,
      ],
    ]
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "testUri": "../../../src/common/images/browseAllActivitiesButton.jpg",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": undefined,
            "width": undefined,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(116, 130, 148)",
              "bottom": 0,
              "flex": 1,
              "justifyContent": "center",
              "left": 0,
              "opacity": 0.4,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {},
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "transparent",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            },
            Object {},
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "color": "#fff",
              "fontSize": 16,
              "fontWeight": "500",
              "justifyContent": "center",
            }
          }
        >
          Browse
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "color": "#fff",
              "fontSize": 16,
              "fontWeight": "500",
              "justifyContent": "center",
            }
          }
        >
          Activities
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`it renders correctly 2`] = `
style = Object {}

<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "red",
          "borderRadius": 4,
          "flex": 1,
          "height": 130,
          "justifyContent": "center",
          "overflow": "hidden",
          "shadowColor": "#ccc",
          "shadowOffset": Object {
            "height": 5,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 1,
        },
        undefined,
      ],
    ]
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "uri": "http://example.com",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": undefined,
            "width": undefined,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(116, 130, 148)",
              "bottom": 0,
              "flex": 1,
              "justifyContent": "center",
              "left": 0,
              "opacity": 0.4,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {},
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "transparent",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            },
            Object {},
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "color": "#fff",
              "fontSize": 16,
              "fontWeight": "500",
              "justifyContent": "center",
            }
          }
        >
          Browse
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "color": "#fff",
              "fontSize": 16,
              "fontWeight": "500",
              "justifyContent": "center",
            }
          }
        >
          Activities
        </Text>
      </View>
    </View>
  </View>
</View>
`;
